@@ -1,4 +1,4 @@
-ATOM_DO(ATOM)
 ATOM_DO(_NET_WM_WINDOW_TYPE)
 ATOM_DO(_NET_WM_WINDOW_TYPE_DOCK)
+ATOM_DO(_NET_WM_STRUT_PARTIAL)
 #undef ATOM_DO
